--- a/web_template/main.css
+++ b/web_template/main.css
@@ -1,3 +1,4 @@
+
 @import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,310;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,310;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/trebuchet-ms-2');
@@ -577,9 +578,6 @@ input[type="search"]::-webkit-search-results-decoration {
     color: #979797;
     transition: all 0.4s ease;
 }
-.functional-link:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
 .box-functional-link a{
     background: linear-gradient(hsl(182, 100%, 94%), hsl(0, 0%, 100%));
     background-size: 0 1px;
@@ -638,7 +636,6 @@ input[type="search"]::-webkit-search-results-decoration {
 /* ------------------------------------- BUTTON ------------------------------------- */
 
 .typo-button{
-    position: relative;
     width: 100%;
     max-width: 64px;
     min-width: 64px;
@@ -652,12 +649,12 @@ input[type="search"]::-webkit-search-results-decoration {
     font-size: 11px;
     font-weight: 400;
     text-shadow: 1px 1px 2px rgba(15, 15, 15, 0.7);
-    transition: 0.3s;
+    transition: 0.4s;
     font-family: "Fira Sans", "Trebuchet MS", Ubuntu, Helvetica, Arial, sans-serif;
 }
 .typo-button:hover{
-    opacity: 0.8;
-    transition: all 0.25s ease;
+    background: transparent !important;
+    transition: all 0.3s ease;
     cursor: pointer;
 }
 
